--- a/Dockerfile.trt_llm_backend
+++ b/Dockerfile.trt_llm_backend
@@ -5,6 +5,8 @@ FROM ${BASE_IMAGE}:${BASE_TAG} as base
 
 RUN apt-get update && apt-get install -y --no-install-recommends rapidjson-dev python-is-python3
 
+
+
 COPY requirements.txt /tmp/
 RUN pip3 install -r /tmp/requirements.txt --extra-index-url https://pypi.ngc.nvidia.com
 
@@ -62,3 +64,8 @@ RUN cd /app/tensorrt_llm/build && pip3 install *.whl
 # Install TensorRT-LLM backend
 RUN mkdir /opt/tritonserver/backends/tensorrtllm
 COPY --from=trt_llm_backend_builder /app/inflight_batcher_llm/build/libtriton_tensorrtllm.so /opt/tritonserver/backends/tensorrtllm
+
+
+RUN apt-get update && apt install git-lsf
+RUN git submodule update --init --recursive && git lfs install && git lfs pull
+RUN cd tensorrt_llm && bash docker/common/install_cmake.sh && export PATH=/usr/local/cmake/bin:$PATH && python3 ./scripts/build_wheel.py --trt_root="/usr/local/tensorrt" && pip3 install ./build/tensorrt_llm*.whl 
