--- a/Dockerfile.trt_llm_backend
+++ b/Dockerfile.trt_llm_backend
@@ -66,6 +66,7 @@ RUN mkdir /opt/tritonserver/backends/tensorrtllm
 COPY --from=trt_llm_backend_builder /app/inflight_batcher_llm/build/libtriton_tensorrtllm.so /opt/tritonserver/backends/tensorrtllm
 
 
-RUN apt-get update && apt install git-lsf
+RUN apt-get update && apt install git-lfs
 RUN git submodule update --init --recursive && git lfs install && git lfs pull
-RUN cd tensorrt_llm && bash docker/common/install_cmake.sh && export PATH=/usr/local/cmake/bin:$PATH && python3 ./scripts/build_wheel.py --trt_root="/usr/local/tensorrt" && pip3 install ./build/tensorrt_llm*.whl 
+RUN cd tensorrt_llm && bash docker/common/install_cmake.sh && export PATH=/usr/local/cmake/bin:$PATH && python3 ./scripts/build_wheel.py --trt_root="/usr/local/tensorrt" && pip3 install ./build/tensorrt_llm*.whl
+
