--- a/Dockerfile.trt_llm_backend
+++ b/Dockerfile.trt_llm_backend
@@ -67,7 +67,7 @@ COPY --from=trt_llm_backend_builder /app/inflight_batcher_llm/build/libtriton_te
 
 
 RUN (cd tensorrt_llm &&
-    bash docker/common/install_cmake.sh &&
+Run docker/common/install_cmake.sh &&
     export PATH=/usr/local/cmake/bin:$PATH &&
     python3 ./scripts/build_wheel.py --trt_root="/usr/local/tensorrt" &&
     pip3 install ./build/tensorrt_llm*.whl)
